# evolving-ai-chat

./: .gitignore  AGENTS.md  README.md  STATUS.md  main.py  package-lock.json  package.json  pyproject.toml
apps/desktop/: README.md  components.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop/runtime/: .env.example  README.md  conftest.py  main.py  models.py  requirements.txt  smoke_storage.py  storage.py  test_apply_rollback.py  test_chat.py  test_evals.py  test_patch_agent.py  test_proposals.py  test_refine_context.py  test_retry.py
apps/desktop/scripts/: runtime-stub.mjs  smoke-fastapi.mjs  smoke.mjs
apps/desktop/src/: App.runAgentFromRefinement.test.ts  App.tsx  MarkdownMessage.test.tsx  MarkdownMessage.tsx  PatchNotification.test.tsx  PatchNotification.tsx  RefinementConversation.test.tsx  RefinementConversation.tsx  activitySheet.test.tsx  activitySheet.tsx  apiKeyStore.ts  appShell.test.tsx  feedbackPanel.test.tsx  feedbackPanel.tsx  feedbackStore.ts  improvementClasses.test.ts  improvementClasses.ts  proposalGenerator.test.ts  proposalGenerator.ts  settingsPanel.test.tsx  (+4 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
docs/: design-guidelines.md  m1-first-improvement-loop.md  m10-agentic-loop-polish.md  m13-self-evolve-reliability.md  m7-improvement-classes.md  m8-code-loop.md
scripts/: validate.mjs
self-evolve/: AGENTS.md
tests/: AGENTS.md  UX_QA_CHECKLIST.md
tickets/: AGENTS.md  README.md
tickets/meta/: README.md
tickets/status/: README.md
(+640 files in other folders)
