[package]
name = "evolving_ai_chat_desktop"
version = "0.1.0"
description = "Desktop shell for evolving AI chat"
authors = ["evolving-ai-chat"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

